fixing align problems

--- a/main/mainv2/guesswhat/chickenbutt/burgerwopperwithUturnSignsForLifeonchair/style.css
+++ b/main/mainv2/guesswhat/chickenbutt/burgerwopperwithUturnSignsForLifeonchair/style.css
@@ -8,6 +8,7 @@
   } 
 
   .dropdown-content {
+    text-align: center;
     display: none;
     position: absolute;
     width: 20%;
@@ -17,10 +18,12 @@
 }
 
 .dropdown:hover .dropdown-content {
+    text-align: center;
     display: block;
 }
 
 .dropdown-content a {
+    text-align: center;
     display: block;
     color: #000000;
     padding: 5px;
